force-app/main/default/objects/Doc_Article__c/Doc_Article__c.object-meta.xml
<CustomObject>
    <label>Doc_Article</label>
    <nameField>
        <displayFormat>DA-{0000}</displayFormat>
        <label>Doc_Article Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doc_Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>