force-app/main/default/objects/Doc_Article__c/fields/Doc_Article_Body__c.field-meta.xml
<CustomField>
    <fullName>Doc_Article_Body__c</fullName>
    <label>Doc_Article_Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>