force-app/main/default/objects/Doc_Article__c/fields/Doc_Article_order__c.field-meta.xml
<CustomField>
    <fullName>Doc_Article_order__c</fullName>
    <label>Doc_Article_order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>