force-app/main/default/objects/Doc_Article__c/fields/Doc_Topic__c.field-meta.xml
<CustomField>
    <fullName>Doc_Topic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doc_Topic</label>
    <referenceTo>Doc_Topic__c</referenceTo>
    <relationshipLabel>Doc_Articles</relationshipLabel>
    <relationshipName>Doc_Articles</relationshipName>
    <type>Lookup</type>
</CustomField>